--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>Upload new File</h1>
+<h1 class='functionality'>Upload New File</h1>
 <form method=post enctype=multipart/form-data>
-    <input type=file name=file>
-    <input type=submit value=Upload>
+    <input type=file name=file class="btn btn-default">
+    <input type=submit value=Upload class="btn btn-default">
 </form>
 {% endblock %}
