Add geo data, map and type hinting

--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -12,9 +12,11 @@
         {% for n in nodes %}
         <tr>
             <td>{{n.ip}}</td>
+            <td>{{n.country}}</td>
             <td>{{n.get_totaltries()}}</td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
+{% include 'map.html' %}
 {% endblock %}
