--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -1,10 +1,11 @@
 
 {% extends "layout.html" %}
 {% block body %}
-<table class='table table-striped'>
+<table class='table table-striped table-sortable table-bordered'>
     <thead class='thead-dark'>
         <tr>
             <th scope='col'>IP</th>
+            <th scope='col'>Country</th>
             <th scope='col'>Request Traffic</th>
         </tr>
     </thead>
