--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block body %}
+{% block content %}
 <h1 class='functionality'>Upload New File</h1>
 <form method=post enctype=multipart/form-data>
     <input type=file name=file class="btn btn-default">
