--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,13 +10,20 @@
   <script src="static/js/main.js"></script>
 </head>
 <title>Data Visualization Tool for Cyber Crime</title>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-{% block body %}{% endblock %}
+<body>
+  <nav class="navbar navbar-default" id="custom-nav">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/api/release-cache" style="color: white;" onclick=eraseCache()>CSCC Intel</a>
+    </div>
+  </nav>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul class=flashes>
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+  {% block content %}{% endblock %}
+</body>
