--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -1,6 +1,6 @@
 
 {% extends "layout.html" %}
-{% block body %}
+{% block content %}
 <table class='table table-striped table-sortable table-bordered'>
     <thead class='thead-dark'>
         <tr>
