--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -19,5 +19,5 @@
         {% endfor %}
     </tbody>
 </table>
-{% include 'map.html' %}
+<iframe id="map-wrapper" src="./static/map.html" width="100%" height="100%" style="overflow:hidden;height: 100vh;width: 100%;"></iframe>
 {% endblock %}
