Add Pie Chart and Handling

--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -1,6 +1,8 @@
 
 {% extends "layout.html" %}
 {% block content %}
+<iframe id="pchart" src="./static/{{ fnames[0] }}" scrolling="no"></iframe>
+<iframe id="pchart" src="./static/{{ fnames[1] }}" scrolling="no"></iframe>
 <table class='table table-striped table-sortable table-bordered'>
     <thead class='thead-dark'>
         <tr>
