--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,4 +21,13 @@
 
 #DataTables_Table_0_wrapper{
     margin-top:20px;
+    width: 80%;
+    height: 40%;
+}
+
+iframe{
+    display: inline-block;
+    overflow: hidden;
+    width: 49%;
+    height: 60vh;
 }
