--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-default" id="custom-nav">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/api/release-cache" style="color: white;" onclick=eraseCache()>CSCC Intel</a>
+      <a class="navbar-brand" href="/api/release-cache" style="color: white;" onclick="return eraseCache()">CSCC Intel</a>
     </div>
   </nav>
   {% with messages = get_flashed_messages() %}
