--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,13 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="/api/release-cache" style="color: white;" onclick="return eraseCache()">CSCC Intel</a>
     </div>
+    <div class="collapse navbar-collapse" id="custom-nav-links">
+      <ul class="nav navbar-nav">
+      <li>
+      <a href="/export" id="export">Export</a>
+      </li>
+      </ul>
+    </div>
   </nav>
   {% with messages = get_flashed_messages() %}
     {% if messages %}
