--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -22,6 +22,6 @@
         {% endfor %}
     </tbody>
 </table>
-<img src="./static/ssh_baseline.png">
+<img src="./static/deviation.png" id="deviation">
 <iframe id="map-wrapper" src="./static/map.html" width="100%" height="100%" style="overflow:hidden;height: 100vh;width: 100%;"></iframe>
 {% endblock %}
