--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,26 @@
     background-image: none;
 }
 
+#export{
+    color: #808080;
+}
+#check-1{
+    border: solid gray;
+    padding: 20px;
+}
+#format-select{
+    width: 50%;
+    margin: 20px;
+}
 #DataTables_Table_0_wrapper{
     margin-top:20px;
+    width: 80%;
+    height: 40%;
+}
+
+iframe{
+    display: inline-block;
+    overflow: hidden;
+    width: 49%;
+    height: 60vh;
 }
