--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,18 +2,27 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.dataTables.min.css">
   <link rel="stylesheet" href="static/css/main.css">
 
   <script src="https://code.jquery.com/jquery-3.5.1.js" type="text/javascript"></script>
   <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js" type="text/javascript"></script>
   <script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap4.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js" type="text/javascript"></script>
   <script src="static/js/main.js"></script>
 </head>
 <title>Data Visualization Tool for Cyber Crime</title>
 <body>
   <nav class="navbar navbar-default" id="custom-nav">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/api/release-cache" style="color: white;" onclick=eraseCache()>CSCC Intel</a>
+      <a class="navbar-brand" href="/api/release-cache" style="color: white;" onclick="return eraseCache()">CSCC Intel</a>
+    </div>
+    <div class="collapse navbar-collapse" id="custom-nav-links">
+      <ul class="nav navbar-nav">
+      <li>
+      <a href="/export" id="export">Export</a>
+      </li>
+      </ul>
     </div>
   </nav>
   {% with messages = get_flashed_messages() %}
