Minor UI Adjustments (#31)
* Update (#18)

* Build Pie Chart Update (#14)

* Add base ui

* Add basic styling

* Add route

* Add files via upload

* Add route

* Merge into UI (#4)

* Update README.md

* Update README.md

* Add files via upload

* Update gitignore

* Add AttackNode Class

* Update

* Update AttackNode.py

* Added code for geolocation analysis of IP addresses

* Added error checking & temporary UI for testing

* Migration

* Update

* Repackage and link

Co-authored-by: Samsterr <61813561+Samsterr@users.noreply.github.com>
Co-authored-by: Marqus <bananasalad123@hotmail.com>

* Stash

* Add template and view

* Update requirements.txt

* Update gitignore

* Add geo data, map and type hinting

* Add sort for tables

* Prototype 1

* Stash Map Refresh

* Merge Latest Update (#10)

* Add files via upload

* Merge prototype into main (#6)

* Add base ui

* Add basic styling

* Add route

* Add files via upload

* Add route

* Merge into UI (#4)

* Update README.md

* Update README.md

* Add files via upload

* Update gitignore

* Add AttackNode Class

* Update

* Update AttackNode.py

* Added code for geolocation analysis of IP addresses

* Added error checking & temporary UI for testing

* Migration

* Update

* Repackage and link

Co-authored-by: Samsterr <61813561+Samsterr@users.noreply.github.com>
Co-authored-by: Marqus <bananasalad123@hotmail.com>

* Stash

* Add template and view

* Update requirements.txt

* Update gitignore

* Add geo data, map and type hinting

* Add sort for tables

* Prototype 1

Co-authored-by: Samsterr <61813561+Samsterr@users.noreply.github.com>
Co-authored-by: Marqus <bananasalad123@hotmail.com>

* Add or update the App Service deployment workflow configuration from Azure Portal.

* Merge into test (#8)

* Add files

* Add documentation and attributes

* Attack Definitions

Bruteforce and Enume

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,9 +31,10 @@
     margin: 20px;
 }
 #DataTables_Table_0_wrapper{
-    margin-top:20px;
     width: 80%;
     height: 40%;
+    margin: auto;
+    margin-top:40px;
 }
 
 iframe{
